  SetNeighborBox to this new routine only need to change the name ("Box" to
  "Part") and append an additional argument 'index_dir'.  See the reference
  manual for details.

- The SStructSplit solver can now be used as a standalone solver (before, it
  could only be used as a preconditioner).  Added HYPRE_Jacobi as an option to
  SetStructSolver.

- Added capability to change Euclid runtime parameters using individual
  functions.

- Improved use of Euclid as smoother in BoomerAMG.

#====================================

Version 2.2.0b released, 2007/09/20.

- Renovate the FEI block preconditioner which will be useful for ALE3D
  simulation of mixed variable type problem

#====================================

Version 2.1.0a released, 2007/06/25.

- Added the CGC and CGC-E coarsening algorithms, which have been developed 
  and implemented by Michael Griebel, Bram Metsch and Alex Schweitzer of 
  the University of Bonn.

- Added several new solver types to AMS and improved the AMS/FEI integration.

- Better handling of the relative change test in GMRES.

- Improved weights for Struct and SStruct weighted Jacobi.

- Added a 'make check' target that does a simple code verification test.

- Added truncation for interpolation according to the number of elements to the 
  ParCSR Hybrid AMG Solver.

- Renovated the hypre fei implementation for use in ARES.

#====================================

Version 2.0.0 released, 2006/12/15.

- Minor documentation updates.

#====================================

Version 1.14.0b released, 2006/11/30.

- Added python support to Babel interface.

- Changed the name of several internal header files to use the '_hypre_' prefix.
  This should not affect most users, since these are internal headers.

- Added AME, a new Maxwell eigensolver based on AMS and LOBPCG.

- Changes to Struct code to hopefully improve efficiency of MG solver setup.

- Efficiency improvements for new long-range interpolation algorithms in
  BoomerAMG, including: